--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "express": "^4.13.3",
     "glob": "^6.0.4",
     "jade": "^1.11.0",
+    "jsonwebtoken": "^7.3.0",
     "method-override": "^2.3.0",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "os": "^0.1.1",
-    "passport": "^0.3.2",
     "redis": "~0.10.0",
     "serve-favicon": "^2.3.0",
     "socket.io": "*",
