--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "main": "app.js",
+  "start":"node app.js",
   "scripts": {
     "start": "node app.js",
     "test": "NODE_ENV=test mocha --recursive test",
